cmake_minimum_required(VERSION 3.1)
project(LESSON2)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
add_executable(typ type.cc)
add_executable(mutable const_mutable.cc)
add_executable(constcast const_cast.cc)
execute_process(COMMAND g++ -S -O1 ${CMAKE_SOURCE_DIR}/volatile.cc)
execute_process(COMMAND g++ -S -O1 ${CMAKE_SOURCE_DIR}/volatile2.cc)
add_executable(simple simple.cc)
add_executable(initializer initializer.cc)
