cmake_minimum_required(VERSION 3.0)
project(IvalDemo)
set(CMAKE_CXX_STANDARD  11)

set(FLTK_SKIP_OPENGL ON)
# set(FLTK_SKIP_FLUID ON)
FIND_PACKAGE(FLTK REQUIRED)
fltk_wrap_ui (wrapIvalUI ival_demo.fl)
MESSAGE(STATUS ${wrapIvalUI_FLTK_UI_SRCS})
add_library(wrapIvalUI STATIC ${wrapIvalUI_FLTK_UI_SRCS})
add_executable(ival_demo fltk_main.cc)
include_directories(${FLTK_INCLUDE_DIR})
target_link_libraries(ival_demo wrapIvalUI)
if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    target_link_libraries(ival_demo ${FLTK_LIBRARIES})
    target_link_libraries(ival_demo dl png z pthread Xinerama Xfixes Xcursor Xft Xrender fontconfig jpeg)
endif()